<resources>
    <string name="app_name">AppFinalMovile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btnIngresar">INGRESAR</string>
    <string name="txtdescricion">Nuestro local ofrece sus servicios en base a reservaciones, en la cual comercialiazaremos a travez de nuestra app hecha para ustedes a nivel nacional.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_reservaciones">RESERVACIONES</string>
    <string name="menu_principal">CATALOGO</string>
    <string name="menu_formulario">FORMULARIO</string>
    <string name="txtReservacion">RESERVACION</string>
    <string name="tvTit">REGISTRO DE RESERVACION</string>
    <string name="btnRegistrar">REGISTRAR</string>
    <string name="txtNombre">Ingrese Nombre</string>
    <string name="txtDni">Ingres N° D.N.I</string>
    <string name="txtCorreo">Ingrese Correo</string>
    <string name="txtFecha">Ingrese Fecha de Reservacion</string>
    <string name="txtAforo">Cantidad de Personas que Asistiran</string>
    <string name="txtTelefono">Ingrese N° Telefono</string>
    <string name="txtNomLocal">Ingrese el Nombre del Local</string>
    <string name="txtTipoEvento">Ingrese el Tipo de Evento</string>
</resources>