<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.example.appfinalmovile.View.Fragment.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_formulario"
        android:name="com.example.appfinalmovile.View.Fragment.FormularioFragment"
        android:label="@string/menu_formulario"
        tools:layout="@layout/fragment_formulario" />

    <fragment
        android:id="@+id/nav_reservaciones"
        android:name="com.example.appfinalmovile.View.Fragment.ReservacionesFragment"
        android:label="@string/menu_reservaciones"
        tools:layout="@layout/fragment_reservaciones" />
</navigation>